add feats
